# kingsite

./: .eslintignore  .eslintrc.js  .gitignore  Cargo.toml  Makefile  README.md  Rocket.toml  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: deploy.yml
@types/: block-content-to-react.d.ts  react-anchor-link-smooth-scroll.d.ts  sanity-schema.d.ts
components/: about.js  about.jsx  about.tsx  home.js  home.jsx  home.tsx  misc.jsx  misc.tsx  nav.js  nav.jsx  nav.tsx  socials.js  socials.jsx  socials.tsx  work.js  work.jsx  work.tsx
components/blog/: home.tsx  post.tsx
components/global/: nav.tsx
components/index/: about.tsx  home.tsx  nav.tsx  socials.tsx  work.tsx
components/utils/: misc.tsx
lib/: github.ts  markdown.ts  sanity.ts
models/: GitHub.ts  Post.ts  SocialImages.ts  schema.ts
pages/: 404.tsx  _app.tsx  _document.tsx  asobi.tsx  blog.tsx  ferrite.tsx  filebridge.tsx  index.js  index.tsx
pages/asobi/: privacy_policy.tsx
pages/blog/post/: [slug].tsx
pages/filebridge/: privacy_policy.tsx
pages/royalguard/: privacy_policy.tsx
src/: main.rs
src/css/: buttons.css  index.css  tailwind.css
src/html/: index.html
src/nextjs/: package.json
src/nextjs/components/: about.js  nav.js
src/nextjs/pages/: index.js
styles/: index.css  preflight-defaults.css  tailwind-base.css
systemd/: kingsite.service
templates/: tailwind_rough.css
